# aliyun-skills

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  README_CN.md  REQUIREMENTS.md  SKILL-MATRIX.md  TODO.md  alicloud-jit-setup.sh  clean_python.sh  diagnosis_report_DOPS-84910.md  docker-compose.yaml  package-lock.json  package.json  progress.md  pyproject.toml  pytest.ini  test-langfuse-integrations.sh
.omo/: optimization-implementation-checklist.md
.sandbox-analysis/: 01-overview-comparison.md
alicloud-ack-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-ack-serverless-ops/: SKILL.md
alicloud-actiontrail-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-advisor-ops/: SKILL.md  TODO.md  test-cli-form.sh  test-skillopt-backward-compatibility.sh
alicloud-agentrun-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-aiops-cruise/: SKILL.md  TODO.md  network-layer-analysis.md
alicloud-alb-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-arch-advisor/: CHANGELOG.md  IMPLEMENTATION_REPORT.md  PROGRESS_BAR_IMPLEMENTATION.md  README.md  SKILL.md  USAGE.md
alicloud-ask-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-auto-scaling-orch/: SKILL.md
alicloud-bailian-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-billing-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-cen-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-cms-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-das-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-dms-ops/: SKILL.md
alicloud-dns-ops/: CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  TODO.md
alicloud-dts-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-eci-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-ecs-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh  test-wrapper-self-call.sh
alicloud-eip-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh
alicloud-elasticsearch-ops/: SKILL.md  TODO.md  test-skillopt-backward-compatibility.sh  test-wrapper-self-call.sh
(+1601 files in other folders)
