[project]
name = "alicloud-skills"
version = "2.0.0"
description = "Alibaba Cloud operational Agent Skills — CLI-first with JIT Go SDK fallback"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "markdownlint-cli2>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-version = "3.10"