[project]
name = "alicloud-skills"
version = "2.0.0"
description = "Alibaba Cloud operational Agent Skills — CLI-first with JIT Go SDK fallback"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "markdownlint-cli2>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alicloud-topo-discovery/scripts/lib"]

[tool.uv]
python-version = "3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "jsonschema>=4.21",
]

[tool.pytest.ini_options]
testpaths = ["alicloud-topo-discovery/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"